08_Networking/28-02_NetPol/app01-netpol.yaml
# Exercise 28-02 v1.2.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app01-netpol
  namespace: dev-ns
spec:
  podSelector:
    matchLabels:
      pod: app01-pod
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels: 
            pod: web01-pod 
      ports:
        - protocol: TCP
          port: 80
