08_Networking/28-02_NetPol/app09-netpol.yaml
# Exercise 20-02 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app09-netpol
  namespace: devstore-ns
spec:
  podSelector:
    matchLabels:
      pod: app09-pod
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels: 
            pod: web09-pod 
      ports:
        - protocol: TCP
          port: 80
